--- a/sass/rac-case-study.scss
+++ b/sass/rac-case-study.scss
@@ -14,60 +14,8 @@ section#header {
 	background-image: url("../img/rac-header.png");
 	background-repeat: repeat-x repeat-y;
 	background-position: center 30%;
-	height: 640px;
+	height: 100%;
 	width: auto;
-
-	@media (min-width: 412px) {
-		height: 659px;
-	}
-
-	@media (min-width: 414px) {
-		height: 736px;
-	}
-
-	@media (min-height: 480px) {
-		height: 535px;
-	}
-
-	@media (min-height: 533px) {
-		height: 535px;
-	}
-
-	@media (min-height: 568px) {
-		height: 570px;
-	}
-
-	@media (min-height: 640px) {
-		height: 645px;
-	}
-
-	@media (min-height: 627px) {
-		height: 630px;
-	}
-
-	@media (min-height: 736px) {
-		height: 736px;
-	}
-
-	@media (min-width: 768px) {
-		height: 350px;
-	}
-
-	@media (min-height: 1024px) {
-		height: 450px;
-	}
-
-	@media (min-width: 1280px) {
-		height: 500px;
-	}
-
-	@media (min-width: 1400px) {
-		height: 550px;
-	}
-
-	@media (min-width: 1600px) {
-		height: 450px;
-	}
 }
 
 #header h1 {
@@ -75,104 +23,59 @@ section#header {
 	color: #fff;
 	font-size: 70px;
 	text-align: center;
-	margin-top: 100px;
+	margin-top: 150px;
 
 	@media (min-width: 320px) {
 		font-size: 55px;
-		margin-top: 80px;
+		margin-top: 100px;
 	}
 
 	@media (min-width: 360px) {
 		font-size: 70px;
-		margin-top: 100px;
+		margin-top: 150px;
 	}
 
 	@media (min-width: 412px) {
 		font-size: 70px;
-		margin-top: 90px;
-		padding-left: 50px;
-		padding-right: 50px;
+		margin-top: 100px;
 	}
 
 	@media (min-width: 414px) {
-		font-size: 70px;
-		margin-top: 120px;
-		padding-left: 50px;
-		padding-right: 50px;
+		font-size: 80px;
+		margin-top: 160px;
 	}
 
 	@media (min-width: 600px) {
-		font-size: 70px;
-		margin-top: 60px;
-		padding-left: 65px;
-		padding-right: 65px;
+		font-size: 90px;
+		margin-top: 180px;
 	}
 
 	@media (min-width: 768px) {
-		font-size: 75px;
-		margin-top: 40px;
-		padding-left: 140px;
-		padding-right: 140px;
+		font-size: 100px;
+		margin-top: 170px;
 	}
 
 	@media (min-width: 800px) {
-		font-size: 90px;
-		margin-top: 50px;
-		padding-left: 110px;
-		padding-right: 110px;
-	}
-
-	@media (min-height: 960px) {
-		font-size: 90px;
-		margin-top: 90px;
-		padding-left: 110px;
-		padding-right: 110px;
-	}
-
-
-	@media (min-height: 1024px) {
-		font-size: 75px;
-		margin-top: 50px;
-		padding-left: 100px;
-		padding-right: 100px;
+		font-size: 120px;
+		margin-top: 200px;
 	}
 
 	@media (min-width: 1280px) {
 		font-size: 120px;
-		margin-top: 60px;
-		padding-left: 250px;
-		padding-right: 250px;
-	}
-
-	@media (min-height: 1280px) {
-		font-size: 90px;
-		margin-top: 30px;
-		padding-left: 100px;
-		padding-right: 100px;
+		margin-top: 200px;
 	}
 
 	@media (min-width: 1400px) {
-		font-size: 100px;
-		margin-top: 60px;
-		padding-left: 390px;
-		padding-right: 390px;
-	}
+		font-size: 120px;
+		margin-top: 200px;
 
-	@media (min-width: 1440px) {
-		font-size: 100px;
-		margin-top: 50px;
-		padding-left: 380px;
-		padding-right: 380px;
 	}
 
 	@media (min-width: 1600px) {
 		text-align: center;
 		font-size: 100px;
-		margin-top: 45px;
-		padding-left: 450px;
-		padding-right: 450px;
+		margin-top: 280px;
 	}
-
 }
 
 #header h4 {
@@ -227,59 +130,10 @@ section#header {
 
 /* CHALLENGEE SECTION */
 
-section#challenge {
+#challenge .container-fluid {
 	background-color: #DFDEDF;
-	height: 800px;
+	height: 100%;
 	width: auto;
-	margin-top: -20px;
-
-	@media (min-width: 360px) {
-		height: 150px;
-	}
-
-	@media (min-width: 384px) {
-		height: 950px;
-	}
-
-	@media (min-height: 480px) {
-		height: 900px;
-	}
-
-	@media (min-height: 568px) {
-		height: 900px;
-	}
-
-	@media (min-height: 640px) {
-		height: 900px;
-	}
-
-	@media (min-height: 627px) {
-		height: 900px;
-	}
-
-	@media (min-height: 736px) {
-		height: 950px;
-	}
-
-	@media (min-height: 960px) {
-		height: 1300px;
-	}
-
-	@media (min-height: 1024px) {
-		height: 1200px;
-	}
-
-	@media (min-width: 1280px) {
-		height: 880px;
-	}
-
-	@media (min-height: 1280px) {
-		height: 1250px;
-	}
-
-	@media (min-height: 2560px) {
-		height: 900px;
-	}
 }
 
 #challenge h1 {
@@ -327,25 +181,20 @@ section#challenge {
 
 #challenge .img-responsive {
 	padding-top: 10px;
+	margin-bottom: 100px;
 	width: 600px;
 	height: auto;
 
-	@media (min-height: 1024px) {
-		margin: auto;
+	@media (min-width: 950px) {
+		margin-left: 60px;
+		margin-right: 60px;
+		margin-top: 80px;
 	}
 
 	@media (min-width: 1280px) {
 		margin-left: 60px;
 		margin-right: 60px;
 		margin-top: 80px;
-	}
-
-	@media (min-height: 1280px) {
-		margin: auto;
-	}
-
-	@media (min-height: 2560px) {
-		padding-top: 90px;
 	}
 }
 
@@ -356,40 +205,10 @@ section#challenge {
 
 /* IDEAA SECTION */
 
-section#idea {
+#idea .container-fluid {
 	background-color: #fbfbfb;
-	height: 1200px;
+	height: 100%;
 	width: auto;
-	margin-top: -20px;
-
-	@media (min-width: 320px) {
-		height: 1900px;
-	}
-
-	@media (min-width: 360px) {
-	 height: 2000px;
-	}
-
-	@media (min-width: 414px) {
-	 height: 2000px;
-	}
-
-
-	@media (min-width: 600px) {
-		height: 2150px;
-	}
-
-	@media (min-width: 800px) {
-		height: 2150px;
-	}
-
-	@media (min-width: 1000px) {
-		height: 1800px;
-	}
-
-	@media (min-width: 1280px) {
-		height: 1500px;
-	}
 }
 
 .light-bulb {
@@ -470,7 +289,8 @@ section#idea {
 	}
 }
 
-.gallery-img {
+.gallery-img .img-responsive {
+	margin-bottom: 100px;
 
 	@media (min-width: 1280px) {
 	 content: url("../img/gallery-img-lg.png");
@@ -481,60 +301,13 @@ section#idea {
 
 /* WIREFRAMESS SECTION */
 
-section#wireframe {
+#wireframe .container-fluid {
 	background-color: #e0e0e0;
 	background-image: url("../img/sketchlogo.png");
 	background-repeat: repeat-x repeat-y;
 	background-position: center 20%;
-	height: 3000px;
+	height: 100%;
 	width: auto;
-	margin-top: -20px;
-
-	@media (min-width: 320px) {
-		height: 2100px;
-	}
-
-	@media (min-width: 360px) {
-		height: 2400px;
-	}
-
-	@media (min-width: 360px) {
-		height: 2300px;
-	}
-
-	@media (min-width: 375px) {
-		height: 2450px;
-	}
-
-	@media (min-width: 384px) {
-		height: 2450px;
-	}
-
-	@media (min-width: 412px) {
-		height: 2600px;
-	}
-
-	@media (min-width: 600px) {
-		height: 3400px;
-	}
-
-	@media (min-width: 768px) {
-		height: 3300px;
-	}
-
-	@media (min-width: 800px) {
-		height: 3350px;
-	}
-
-	@media (min-width: 1000px) {
-		height: 800px;
-	}
-
-	@media (min-width: 1280px) {
-		height: 900px;
-	}
-
-
 }
 
 #wireframe h1 {
@@ -590,62 +363,16 @@ section#wireframe {
 	}
 }
 
+.last-img{
+	margin-bottom: 100px;
+}
+
 /* THE DESIGN */
 
-section#design {
+#design .container-fluid {
 	background-color: #ececec;
 	height: 100%;
 	width: auto;
-	margin-top: -20px;
-
-	@media (min-width: 320px) {
-		height: 1250px;
-	}
-
-	@media (min-width: 360px) {
-		height: 1250px;
-	}
-
-	@media (min-width: 375px) {
-		height: 1300px;
-	}
-
-	@media (min-width: 384px) {
-		height: 1300px;
-	}
-
-	@media (min-width: 412px) {
-		height: 1400px;
-	}
-
-	@media (min-width: 600px) {
-		height: 2100px;
-	}
-
-	@media (min-width: 600px) {
-		height: 1250px;
-	}
-
-	@media (min-width: 768px) {
-		height: 1350px;
-	}
-
-	@media (min-width: 800px) {
-		height: 1350px;
-	}
-
-	@media (min-width: 1280px) {
-		height: 1600px;
-	}
-
-	@media (min-width: 1440px) {
-		height: 1600px;
-	}
-
-	@media (min-width: 1600px) {
-		height: 1500px;
-	}
-
 }
 
 section#design h1 {
@@ -678,49 +405,100 @@ section#design p {
 	}
 }
 
+.screenscroll .img-responsive {
+	display: table;
+	margin-bottom: 100px;
+	position: relative;
+	z-index: 1;
+}
+
 .screenscroll {
 	margin-top: 30px;
 	margin-bottom: 40px;
+	height: 500px;
 
 	@media (min-width: 600px) {
-		height: 300px;
 		width: auto;
 		overflow: scroll;
 	}
 
 	@media (min-width: 1000px) {
-		height: 400px;
 		width: auto;
 		overflow: scroll;
 		padding-left: 40px;
 	}
 
 	@media (min-width: 1440px) {
-		height: 400px;
 		width: auto;
 		overflow: scroll;
 		padding-left: 100px;
 	}
 
 	@media (min-width: 1280px) {
-		height: 400px;
 		width: auto;
 		overflow: scroll;
 		padding-top: 40px;
 		margin-left: 80px;
-
 	}
 }
 
 .logos{
-	margin-bottom: 40px;
+	display: table;
+	text-align: center;
+	position: relative;
+	margin: auto;
+	padding-bottom: 100px;
+
+	@media (min-width: 320px){
+		padding-top: 100px;
+	}
+
+	@media (min-width: 360px){
+		padding-top: 120px;
+	}
+
+	@media (min-width: 400px){
+		padding-top: 140px;
+	}
+
+	@media (min-width: 440px){
+		padding-top: 180px;
+	}
+
+	@media (min-width: 470px){
+		padding-top: 210px;
+	}
+
+	@media (min-width: 500px){
+		padding-top: 260px;
+	}
+
+	@media (min-width: 520px){
+		padding-top: 300px;
+	}
+
+	@media (min-width: 540px){
+		padding-top: 350px;
+	}
+
+	@media (min-width: 580px){
+		padding-top: 370px;
+	}
+
+	@media (min-width: 590px){
+		padding-top: 400px;
+	}
+
+	@media (min-width: 600px){
+		padding-top: 0px;
+	}
 
 	@media (min-width: 1000px) {
 		display: table;
 		text-align: center;
 		margin: auto;
 		padding-bottom: 100px;
-		padding-top: 50px;
+		padding-top: 30px;
 	}
 
 	@media (min-width: 1280px) {
@@ -735,59 +513,18 @@ section#design p {
 
 /* THE FINAL DESIGN */
 
-section#finaldesign {
+#finaldesign .container-fluid{
 	background-color: #fff;
 	height: 100%;
 	width: auto;
-
-	@media (min-width: 320px) {
-		height: 840px;
-		margin-top: 30px;
-	}
-
-	@media (min-width: 360px) {
-		height: 840px;
-		margin-top: 50px;
-	}
-
-	@media (min-width: 600px) {
-		height: 1100px;
-	}
-
-	@media (min-width: 768px) {
-		height: 1130px;
-	}
-
-	@media (min-width: 800px) {
-		height: 1400px;
-	}
-
-	@media (min-width: 900px) {
-		height: 900px;
-		margin-top: 0px;
-	}
-
-	@media (min-width: 1280px) {
-		height: 1100px;
-		margin-top: 0px;
-	}
-
-	@media (min-width: 1600px) {
-		height: 2800px;
-	}
 }
 
 section#finaldesign h1 {
 	font-family: 'Cookie', cursive;
 	font-size: 45px;
 	color: #595859;
-	padding-top: 10px;
+	padding-top: 50px;
 	text-align: left;
-
-	@media (min-width: 360px) {
-		padding-top: 20px;
-		margin-top: 0px;
-	}
 
 	@media (min-width: 1280px) {
 			font-size: 60px;
@@ -830,6 +567,7 @@ section#finaldesign a {
 .finaldesign-img {
 	margin: auto;
 	display: table;
+	padding-bottom: 50px;
 
 	@media (min-width: 320px) {
 		padding-top: 30px;
@@ -846,13 +584,7 @@ section#finaldesign a {
   width: auto;
   margin: auto;
   display: table;
-  padding-top: 40px;
 	padding-bottom: 100px;
-
-  @media (min-width: 1600px) {
-    padding-top: 70px;
-  }
-
 }
 
 
