--- a/css/solar_system_style2.css
+++ b/css/solar_system_style2.css
@@ -5799,7 +5799,8 @@ header {
   color: #ffffff;
   display: block;
   font: 14px/1.3 Arial,sans-serif;
-  height: 50px;
+  height: 100%;
+  width: auto;
   position: relative;
   z-index: 5; }
 
