--- a/sass/solar_system_style2.scss
+++ b/sass/solar_system_style2.scss
@@ -23,7 +23,8 @@ header {
     color:#ffffff;
     display:block;
     font: 14px/1.3 Arial,sans-serif;
-    height:50px;
+    height:100%;
+		width: auto;
     position:relative;
     z-index:5;
 }
@@ -90,6 +91,9 @@ header a, a:visited {
 
 .stars {
   background:#000 url("../img/stars2.png") repeat top center;
+	// background-size: cover;
+	// height: 100%;
+	// width: auto;
   z-index:-1;
 }
 
