--- a/sass/ux_sketch.scss
+++ b/sass/ux_sketch.scss
@@ -452,6 +452,14 @@ section#header {
 	margin-right: -15px;
 }
 
+.back-arrow {
+  text-align: center;
+  margin: auto;
+  display: table;
+  padding-bottom: 40px;
+  cursor: pointer;
+}
+
 .text-wrapper2 {
 	text-align: center;
 	padding: 40px;
