--- a/css/ui-main.css
+++ b/css/ui-main.css
@@ -6159,3 +6159,11 @@ html, body {
   @media (min-width: 320px) {
     .glyphicon-arrow-left {
       padding-top: 0px; } }
+
+.back-arrow {
+  text-align: center;
+  display: table;
+  margin: auto;
+  padding-top: 40px;
+  opacity: 0.2;
+  filter: alpha(opacity=20); }
