--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,22 +85,17 @@ section#header {
 	line-height: 15px;
 	font-size: 25px;
 
-	@media (min-width: $screen-xs-min) {
+	@media (min-width: 320px) {
+		font-size: 20px;
+	}
+
+	@media (min-width: 600px) {
 		font-size: 30px;
-		line-height: 30px;
 	}
 
-	@media (min-width: $screen-sm-min) {
-		font-size: 35px;
-	}
-
-	@media (min-width: $screen-md-min) {
-		font-size: 35px;
-	}
-
-	@media (min-width: $screen-lg-min) {
-		font-size: 40px;
-		line-height: 30px;
+	@media (min-width: 1280px) {
+		font-size: 30px;
+		margin-top: 30px;
 	}
 }
 
@@ -267,20 +262,25 @@ ul.nav.nav-pills {
 /* ABOUT */
 #about {
 	z-index: 1;
-	margin-bottom: 80px;
 	@extend .container;
 }
 
 .pic {
-	margin-top: 40px;
+	margin-top: 20px;
 	text-align: center;
 
 	@include make-xs-column(12);
 	@include make-md-column(4);
+	@include make-lg-column(4);
 
 	img {
-		width: 250px;
-		height: 250px;
+		width: 200px;
+		height: 200px;
+	}
+
+	@media (min-width: 992px){
+		padding: 0;
+		margin-top: 60px;
 	}
 }
 
@@ -295,71 +295,70 @@ ul.nav.nav-pills {
 
 	@include make-xs-column(12);
 	@include make-md-column(8);
-	@include make-lg-column(8);
+	@include make-lg-column(7);
 }
 
 .info h3 {
-	margin-top: 20px;
 	margin-bottom: 15px;
-	color:#8A8A8A;
+	color: #767676;
 	font-size: 25px;
 	text-align: center;
 
-	@media (min-width: $screen-sm-min) {
-		text-align: left;
+	@media (min-width: 320px) {
+		text-align: center;
+		margin-top: 0;
 	}
 
-	@media (min-width: $screen-md-min) {
+	@media (min-width: 360px) {
+		text-align: center;
+		margin-top: 0;
+	}
+
+	@media (min-width: 500px){
+		text-align: center;
+	}
+
+	@media (min-width: 992px) {
+		margin-top: 30px;
 		text-align: left;
-		font-size: 23px;
 	}
 }
 
 .info p {
 	color: #919191;
-	text-align: justify;
-	font-size: 16px;
-}
+	text-align: left;
+	font-size: 20px;
 
-.flex-list {
-    position: relative;
-    margin: 1em;
-    overflow: hidden;
-		margin-left: 0px;
-}
-
-.flex-list ul {
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.flex-list li {
-    flex-grow: 1;
-    flex-basis: auto;
-    padding: 0 1em;
-    text-align: center;
-    border-left: 1px solid #ccc;
-    background-color: #fff;
-		font-size: 13px;
+	@media (min-width: 600px){
+		text-align: center;
+	}
+	@media (min-width: 992px){
+		text-align: left;;
+	}
 }
 
 #about ul {
 	text-align: center;
 	margin-top: 30px;
+	margin-bottom: 100px;
 	color: #919191;
 	font-size: 16px;
 
-	img {
-		width: 30px;
-		height: 30px;
-		text-align: center;
-	}
-
-	@media (min-width: $screen-sm-min) {
+	@media (min-width: 992px) {
 		text-align: left;
 	}
-}
 
+	img {
+		width: 40px;
+		height: 40px;
+		text-align: center;
+
+		@media (min-width: 320px){
+			width: 35px;
+			height: 35px;
+		}
+	}
+}
 /*--SOCIAL MEDIA ANIMATION 'Bob'-- */
 @-webkit-keyframes hvr-bob {
   0% {
@@ -454,174 +453,184 @@ ul.nav.nav-pills {
 	animation-direction: normal, alternate;
 }
 
-/* Divider */
-
-.divider {
-	background-color: #cee2fc;
-	background-image: url("../img/divider-pattern.png");
-	background-repeat: repeat-x repeat-y;
-	background-position: center;
-	height: 150px;
-	width: auto;
-
-}
-
-/* Projects */
-/* NOTES: NEED TO CENTER project-image2 HORIZONTALLY on small device */
-
 #projects {
 	@extend .container;
-	margin-top: 80px;
+	margin-top: 0px;
 	margin-bottom: 100px;
+	width: 100%;
+	padding: 0;
 }
 
 .project-image1 {
-	height: auto;
-	margin-bottom: 20px;
-	margin-top: 10px;
-	@include make-xs-column(12);
-	@include make-md-column(6);
-	img {
-		max-width: 100%;
+	text-align: center;
+	margin: auto;
 
-		@media (min-width: $screen-md-min) {
-			max-width: 500px;
-		}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 163dpi) {
+	  @include make-xs-column(6);
+	}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 176dpi) {
+		@include make-xs-column(12);
+	}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 200dpi) {
+		@include make-sm-column(6);
+	}
+	@media (min-width: 800px){
+		@include make-lg-column(6);
 	}
 }
 
 .project-image2 {
-	height: auto;
-	margin-top: 20px;
-	@include make-xs-column(12);
-	@include make-md-column(3);
 	text-align: center;
+	margin: auto;
+	padding-top: 20px;
 
-	@media (min-width: $screen-md-min) {
-		margin-top: 50px;
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 163dpi) {
+		@include make-lg-column(6);
 	}
-
-	img {
-		max-width: 220px;
-
-		@media (min-width: $screen-md-min) {
-			max-width: 230px;
-		}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 176dpi) {
+		@include make-xs-column(12);
+	}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 200dpi) {
+		@include make-sm-column(6);
+	}
+	@media (min-width: 800px){
+		@include make-lg-column(6);
+	}
+	@media (min-width: 1200px){
+		padding-top: 0;
 	}
 }
 
 .project-image3 {
-	height: auto;
-	margin-top: 10px;
+	text-align: center;
+	margin: auto;
+	padding-top: 20px;
 
-	@include make-md-column-pull(4);
-	@include make-md-column(8);
-	@include make-xs-column(12);
-
-	img {
-		max-width: 100%;
-
-		@media (min-width: $screen-md-min) {
-			max-width: 600px;
-		}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 163dpi) {
+		@include make-xs-column(6);
+	}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 176dpi) {
+		@include make-xs-column(12);
+	}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 200dpi) {
+		@include make-sm-column(6);
+	}
+	@media (min-width: 63px){
+		@include make-lg-column(6);
 	}
 }
 
-.case-study-text {
-	font-size: 16px;
-	color: #919191;
-	margin-bottom: 20px;
-	@include make-xs-column(12);
-	@include make-md-column(3);
+.project-image4 {
+	text-align: center;
+	margin: auto;
+	padding-top: 20px;
 
-	h3 {
-		text-align: center;
-		font-size: 25px;
-		color:#8A8A8A;
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 163dpi) {
+		@include make-xs-column(6);
 	}
-
-	@media (min-width: $screen-md-min) {
-		margin-top: 60px;
-		h3 {
-			text-align: left;
-		}
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 176dpi) {
+		@include make-xs-column(12);
 	}
-}
-
-.case-study2-text {
-	font-size: 16px;
-	color: #919191;
-
-	@include make-md-column(4);
-	@include make-md-column-push(7);
-	@include make-xs-column(12);
-
-	h3 {
-		text-align: center;
-		font-size: 25px;
-		color:#8A8A8A;
+	@media
+	(-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 200dpi) {
+		@include make-sm-column(6);
 	}
-
-	@media (min-width: $screen-md-min) {
-		margin-top: 60px;
-		h3 {
-			text-align: left;
-		}
+	@media (min-width: 800px) {
+		@include make-lg-column(6);
 	}
 }
 
-.project-btn {
-	@include button-variant(#fff, #94d3fd, darken(#94d3fd, 5%));
-	@include button-size(5px, 10px, 1em, $line-height-large, $btn-border-radius-large);
-	margin-top: 20px;
-	margin-bottom: 45px;
+
+
+/* Grow Shadow */
+.hvr-grow-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow, transform;
+  transition-property: box-shadow, transform;
+}
+.hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
+  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  -webkit-transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 /* sketchbook */
 //
-.sketchbook {
-	@extend .container;
-	margin-bottom: 100px;
-
-	@media (min-width: $screen-lg-min) {
-		margin-top: 180px;
-	}
-}
-
-.sketchbook .case-study-text {
-	@media (min-width: $screen-lg-min) {
-		height: 500px;
-	}
-}
-
-.img-responsive {
-	display: inline-flex;
-	margin-bottom: 10px;
-	@include make-xs-column(4);
-	@include make-md-column(2);
-	@include make-lg-column(2.3);
-	@include make-lg-column-push(1);
-
-	@media (min-width: $screen-md-min) {
-		margin-bottom: 20px;
-	}
-}
+// .sketchbook {
+// 	@extend .container;
+// 	margin-bottom: 100px;
+//
+// 	@media (min-width: $screen-lg-min) {
+// 		margin-top: 180px;
+// 	}
+// }
+//
+// .sketchbook .case-study-text {
+// 	@media (min-width: $screen-lg-min) {
+// 		height: 500px;
+// 	}
+// }
+//
+// .img-responsive {
+// 	display: inline-flex;
+// 	margin-bottom: 10px;
+// 	@include make-xs-column(4);
+// 	@include make-md-column(2);
+// 	@include make-lg-column(2.3);
+// 	@include make-lg-column-push(1);
+//
+// 	@media (min-width: $screen-md-min) {
+// 		margin-bottom: 20px;
+// 	}
+// }
 
 /* sketchbook hover */
 
 /*DARKEN*/
-.brighten .img-responsive {
-  -webkit-filter: brightness(100%);
-  -webkit-transition: all 1s ease;
-     -moz-transition: all 1s ease;
-       -o-transition: all 1s ease;
-      -ms-transition: all 1s ease;
-          transition: all 1s ease;
-}
-
-.brighten .img-responsive:hover {
-  -webkit-filter: brightness(60%);
-}
+// .brighten .img-responsive {
+//   -webkit-filter: brightness(100%);
+//   -webkit-transition: all 1s ease;
+//      -moz-transition: all 1s ease;
+//        -o-transition: all 1s ease;
+//       -ms-transition: all 1s ease;
+//           transition: all 1s ease;
+// }
+//
+// .brighten .img-responsive:hover {
+//   -webkit-filter: brightness(60%);
+// }
 
 /* CONTACT */
 
@@ -630,7 +639,7 @@ ul.nav.nav-pills {
 	background-color: #6F81D6;
 	background-position: center;
 	height: 400px;
-	padding-top: 45px;
+	padding-top: 65px;
 
 	h1, h2, p {
 		color: #fff;
@@ -647,7 +656,7 @@ ul.nav.nav-pills {
 
 	h2 {
 		margin-bottom: 0.9em;
-		font-size: 18pt;
+		font-size: 22pt;
 	}
 
 	p {
@@ -658,7 +667,7 @@ ul.nav.nav-pills {
 }
 
 .btn-contact {
-	@include button-variant(#fff, #FFCC73, darken(#FFCC73, 5%));
+	@include button-variant(#fff, #FFAC68, darken(#FFAC68, 5%));
 	@include button-size(15px, 35px, 1.5em, $line-height-large, $btn-border-radius-large);
 	margin-top: 40px;
 }
