--- a/css/saatchi_project.css
+++ b/css/saatchi_project.css
@@ -5989,6 +5989,11 @@ html, body {
     #section3 p {
       padding: 50px; } }
 
+#section3 {
+  background-color: #ededed;
+  width: 100%;
+  height: auto; }
+
 .screen-shot6 {
   margin: auto;
   display: table;
