--- a/sass/saatchi_project.scss
+++ b/sass/saatchi_project.scss
@@ -257,6 +257,12 @@ html,body {
   }
 }
 
+#section3 {
+  background-color: #ededed;
+  width: 100%;
+  height: auto;
+}
+
 .screen-shot6 {
   margin: auto;
   display: table;
