--- a/css/saatchi_project.css
+++ b/css/saatchi_project.css
@@ -5784,6 +5784,7 @@ html, body {
   height: 100%;
   margin: 0; }
 
+/* Header section*/
 #header {
   background-color: #ededed;
   width: 100%;
@@ -5834,8 +5835,9 @@ html, body {
       padding: 20px 35px 80px 35px;
       font-size: 30px; } }
 
+/* intro section */
 #section1 {
-  background-color: #606060;
+  background-color: #272944;
   width: 100%;
   height: auto;
   margin-top: -10px; }
@@ -5850,10 +5852,11 @@ html, body {
       padding: 80px 35px 80px 35px;
       font-size: 30px; } }
 
+/* Sketches */
 #sketch {
   width: 100%;
   height: auto;
-  background-color: #ffffff; }
+  background-color: #0c0c0c; }
 
 .sketch1 {
   text-align: center;
@@ -5862,7 +5865,15 @@ html, body {
   padding: 60px 15px 15px 15px; }
   @media (min-width: 1280px) {
     .sketch1 {
-      padding: 100px 15px 50px 15px; } }
+      padding: 100px 0px 100px 0px;
+      position: relative;
+      min-height: 1px;
+      padding-left: 15px;
+      padding-right: 15px; } }
+  @media (min-width: 1280px) and (min-width: 1200px) {
+    .sketch1 {
+      float: left;
+      width: 50%; } }
 
 .sketch2 {
   text-align: center;
@@ -5871,10 +5882,36 @@ html, body {
   padding: 0px 15px 60px 15px; }
   @media (min-width: 1280px) {
     .sketch2 {
-      padding: 0px 15px 100px 15px; } }
+      padding: 100px 0px 100px 0px;
+      position: relative;
+      min-height: 1px;
+      padding-left: 15px;
+      padding-right: 15px; } }
+  @media (min-width: 1280px) and (min-width: 1200px) {
+    .sketch2 {
+      float: left;
+      width: 50%; } }
 
+/* title divider*/
+.header1 {
+  background-color: #272944;
+  width: 100%;
+  height: auto;
+  margin-top: -10px; }
+
+.header1 p {
+  font-size: 25px;
+  text-align: center;
+  color: #ffffff;
+  padding: 30px 20px 30px 20px; }
+  @media (min-width: 1280px) {
+    .header1 p {
+      padding: 40px 35px 40px 35px;
+      font-size: 30px; } }
+
+/* menu feature */
 #section2 {
-  background-color: #ededed;
+  background-color: #e6e6e6;
   width: 100%;
   height: auto; }
 
@@ -5906,23 +5943,6 @@ html, body {
     #section2 h3 {
       padding: 50px; } }
 
-#section2 i {
-  color: #114B5F;
-  font-size: 25px;
-  text-align: center; }
-  @media (min-width: 1280px) {
-    #section2 i {
-      text-align: center; } }
-
-.center-quote {
-  margin: auto;
-  display: table;
-  text-align: center; }
-
-#section2 footer {
-  color: #186D89;
-  padding-top: 10px; }
-
 .screen-shot1 {
   text-align: center;
   margin: auto;
@@ -5941,6 +5961,51 @@ html, body {
     .screen-shot2 {
       padding-bottom: 50px; } }
 
+#section2 i {
+  color: #114B5F;
+  font-size: 25px;
+  text-align: center; }
+  @media (min-width: 1280px) {
+    #section2 i {
+      text-align: center; } }
+
+.center-quote {
+  margin: auto;
+  display: table;
+  text-align: center;
+  padding-bottom: 20px; }
+  @media (min-width: 1280px) {
+    .center-quote {
+      padding-bottom: 100px; } }
+
+#section2 footer {
+  color: #186D89;
+  padding-top: 10px;
+  padding-bottom: 50px; }
+
+/* title divider*/
+.header2 {
+  background-color: #272944;
+  width: 100%;
+  height: auto;
+  margin-top: -10px; }
+
+.header2 p {
+  font-size: 25px;
+  text-align: center;
+  color: #ffffff;
+  padding: 30px 20px 30px 20px; }
+  @media (min-width: 1280px) {
+    .header2 p {
+      padding: 40px 35px 40px 35px;
+      font-size: 30px; } }
+
+/* Nav section */
+#section3 {
+  background-color: #e6e6e6;
+  width: 100%;
+  height: auto; }
+
 .screen-shot3 {
   margin: auto;
   display: table;
@@ -5948,7 +6013,7 @@ html, body {
   padding: 40px 0 15px 0; }
   @media (min-width: 1280px) {
     .screen-shot3 {
-      padding-top: 60px; } }
+      padding-top: 100px; } }
 
 .screen-shot4 {
   margin: auto;
@@ -5959,19 +6024,85 @@ html, body {
     .screen-shot4 {
       padding-top: 20px; } }
 
+#section3 p {
+  padding: 30px;
+  color: #595959;
+  font-size: 20px; }
+  @media (min-width: 1280px) {
+    #section3 p {
+      padding-bottom: 100px; } }
+
+/* title divider*/
 #color-palette {
+  background-color: #272944;
   width: 100%;
   height: auto;
-  background-image: url("../img/background-img.png");
-  background-repeat: no-repeat;
-  background-size: 150%; }
+  margin-top: -10px; }
 
-#color-palette p {
-  padding: 60px 15px 60px 15px;
-  color: #114B5F;
-  font-size: 20px;
-  text-align: center; }
+#color-palette h3 {
+  font-size: 25px;
+  text-align: center;
+  color: #ffffff;
+  padding: 30px 20px 30px 20px; }
+  @media (min-width: 1280px) {
+    #color-palette h3 {
+      padding: 40px 35px 40px 35px;
+      font-size: 30px; } }
 
+/* colour palette section */
+.color-palette-text {
+  padding: 30px;
+  color: #595959;
+  font-size: 20px; }
+  @media (min-width: 1280px) {
+    .color-palette-text {
+      padding-top: 100px;
+      padding-bottom: 100px;
+      position: relative;
+      min-height: 1px;
+      padding-left: 15px;
+      padding-right: 15px; } }
+  @media (min-width: 1280px) and (min-width: 1200px) {
+    .color-palette-text {
+      float: left;
+      width: 50%; } }
+
+.colour-img {
+  text-align: center;
+  display: table;
+  margin: auto;
+  padding-bottom: 50px; }
+  @media (min-width: 1280px) {
+    .colour-img {
+      padding-top: 100px;
+      padding-bottom: 100px;
+      position: relative;
+      min-height: 1px;
+      padding-left: 15px;
+      padding-right: 15px; } }
+  @media (min-width: 1280px) and (min-width: 1200px) {
+    .colour-img {
+      float: left;
+      width: 50%; } }
+
+/* title divider*/
+.header3 {
+  background-color: #272944;
+  width: 100%;
+  height: auto;
+  margin-top: -10px; }
+
+.header3 h3 {
+  font-size: 25px;
+  text-align: center;
+  color: #ffffff;
+  padding: 30px 20px 30px 20px; }
+  @media (min-width: 1280px) {
+    .header3 h3 {
+      padding: 40px 35px 40px 35px;
+      font-size: 30px; } }
+
+/* Finability & Usability */
 .screen-shot5 {
   margin: auto;
   display: table;
@@ -5981,16 +6112,16 @@ html, body {
     .screen-shot5 {
       padding-top: 100px; } }
 
-#section3 p {
+#section4 p {
   padding: 30px;
   color: #595959;
   font-size: 20px; }
   @media (min-width: 1280px) {
-    #section3 p {
+    #section4 p {
       padding: 50px; } }
 
-#section3 {
-  background-color: #ededed;
+#section4 {
+  background-color: #e6e6e6;
   width: 100%;
   height: auto; }
 
@@ -6000,27 +6131,25 @@ html, body {
   text-align: center;
   padding-bottom: 15px; }
 
-#section4-banner {
-  background-color: #606060;
+/* title divider*/
+#section5-banner {
+  background-color: #272944;
   width: 100%;
   height: auto;
   margin-top: -10px; }
 
-#section4-banner h3 {
-  color: #ffffff;
-  font-family: sans-serif;
-  font-style: bold;
-  font-size: 30px;
+#section5-banner h3 {
+  font-size: 25px;
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px; }
+  color: #ffffff;
+  padding: 30px 20px 30px 20px; }
   @media (min-width: 1280px) {
-    #section4-banner h3 {
-      font-size: 35px;
-      padding-top: 25px;
-      padding-bottom: 25px; } }
+    #section5-banner h3 {
+      padding: 40px 35px 40px 35px;
+      font-size: 30px; } }
 
-#section4 {
+/*The New Design */
+#section5 {
   width: 100%;
   height: auto;
   background-image: #ffffff;
@@ -6030,12 +6159,12 @@ html, body {
   margin: auto;
   display: table;
   text-align: center;
-  padding-bottom: 54px;
+  padding-bottom: 30px;
   margin-top: 20px; }
 
 .back-arrow {
   text-align: center;
   margin: auto;
   display: table;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
   cursor: pointer; }
