--- a/sass/saatchi_project.scss
+++ b/sass/saatchi_project.scss
@@ -9,6 +9,7 @@ html,body {
   margin: 0;
 }
 
+/* Header section*/
 #header {
   background-color: #ededed;
   width: 100%;
@@ -67,8 +68,9 @@ html,body {
   }
 }
 
+/* intro section */
 #section1 {
-  background-color: #606060;
+  background-color: #272944;
   width: 100%;
   height: auto;
   margin-top: -10px;
@@ -86,10 +88,11 @@ html,body {
   }
 }
 
+/* Sketches */
 #sketch {
   width: 100%;
   height: auto;
-  background-color: #ffffff;
+  background-color: #0c0c0c;
 }
 
 .sketch1 {
@@ -99,7 +102,8 @@ html,body {
   padding: 60px 15px 15px 15px;
 
   @media (min-width: 1280px){
-    padding: 100px 15px 50px 15px;
+    padding: 100px 0px 100px 0px;
+		@include make-lg-column(6);
   }
 }
 
@@ -110,12 +114,35 @@ html,body {
   padding: 0px 15px 60px 15px;
 
   @media (min-width: 1280px){
-    padding: 0px 15px 100px 15px;
+    padding: 100px 0px 100px 0px;
+		@include make-lg-column(6);
   }
 }
 
+/* title divider*/
+.header1 {
+	background-color: #272944;
+	width: 100%;
+	height: auto;
+	margin-top: -10px;
+}
+
+.header1 p {
+	font-size: 25px;
+	text-align: center;
+	color: #ffffff;
+	padding: 30px 20px 30px 20px;
+
+	@media (min-width: 1280px){
+		padding: 40px 35px 40px 35px;
+		font-size: 30px;
+	}
+}
+
+
+/* menu feature */
 #section2 {
-  background-color: #ededed;
+  background-color: #e6e6e6;
   width: 100%;
   height: auto;
 }
@@ -154,27 +181,6 @@ html,body {
   }
 }
 
-#section2  i {
-  color: #114B5F;
-  font-size: 25px;
-  text-align: center;
-
-  @media (min-width: 1280px){
-    text-align: center;
-  }
-}
-
-.center-quote {
-  margin: auto;
-  display: table;
-  text-align: center;
-}
-
-#section2 footer {
-  color: #186D89;
-  padding-top: 10px;
-}
-
 .screen-shot1 {
   text-align: center;
   margin: auto;
@@ -198,6 +204,63 @@ html,body {
 
 }
 
+
+#section2  i {
+  color: #114B5F;
+  font-size: 25px;
+  text-align: center;
+
+  @media (min-width: 1280px){
+    text-align: center;
+  }
+}
+
+.center-quote {
+  margin: auto;
+  display: table;
+  text-align: center;
+	padding-bottom: 20px;
+
+	@media (min-width: 1280px){
+		padding-bottom: 100px;
+	}
+}
+
+#section2 footer {
+  color: #186D89;
+  padding-top: 10px;
+	padding-bottom: 50px;
+
+}
+
+
+/* title divider*/
+.header2 {
+	background-color: #272944;
+	width: 100%;
+	height: auto;
+	margin-top: -10px;
+}
+
+.header2 p {
+	font-size: 25px;
+	text-align: center;
+	color: #ffffff;
+	padding: 30px 20px 30px 20px;
+
+	@media (min-width: 1280px){
+		padding: 40px 35px 40px 35px;
+		font-size: 30px;
+	}
+}
+
+/* Nav section */
+#section3 {
+  background-color: #e6e6e6;
+  width: 100%;
+  height: auto;
+}
+
 .screen-shot3 {
   margin: auto;
   display: table;
@@ -205,7 +268,7 @@ html,body {
   padding: 40px 0 15px 0;
 
   @media (min-width: 1280px){
-    padding-top: 60px;
+    padding-top: 100px;
   }
 }
 
@@ -218,24 +281,85 @@ html,body {
   @media (min-width: 1280px){
     padding-top: 20px;
   }
-
 }
 
+#section3 p {
+	padding: 30px;
+	color: #595959;
+	font-size: 20px;
+
+	@media (min-width: 1280px){
+		padding-bottom: 100px;
+	}
+}
+
+/* title divider*/
 #color-palette {
-  width: 100%;
-  height: auto;
-  background-image: url("../img/background-img.png");
-  background-repeat: no-repeat;
-  background-size: 150%;
+	background-color: #272944;
+	width: 100%;
+	height: auto;
+	margin-top: -10px;
 }
 
-#color-palette p {
-  padding: 60px 15px 60px 15px;
-  color: #114B5F;
-  font-size: 20px;
-  text-align: center;
+#color-palette h3 {
+	font-size: 25px;
+	text-align: center;
+	color: #ffffff;
+	padding: 30px 20px 30px 20px;
+
+	@media (min-width: 1280px){
+		padding: 40px 35px 40px 35px;
+		font-size: 30px;
+	}
+}
+ /* colour palette section */
+
+.color-palette-text {
+	padding: 30px;
+	color: #595959;
+	font-size: 20px;
+
+	@media (min-width: 1280px){
+		padding-top: 100px;
+		padding-bottom: 100px;
+		@include make-lg-column(6);
+	}
 }
 
+.colour-img{
+	text-align: center;
+	display: table;
+	margin: auto;
+	padding-bottom: 50px;
+
+	@media (min-width: 1280px){
+		padding-top: 100px;
+		padding-bottom: 100px;
+		@include make-lg-column(6);
+	}
+}
+
+/* title divider*/
+.header3 {
+	background-color: #272944;
+	width: 100%;
+	height: auto;
+	margin-top: -10px;
+}
+
+.header3 h3 {
+	font-size: 25px;
+	text-align: center;
+	color: #ffffff;
+	padding: 30px 20px 30px 20px;
+
+	@media (min-width: 1280px){
+		padding: 40px 35px 40px 35px;
+		font-size: 30px;
+	}
+}
+
+/* Finability & Usability */
 .screen-shot5 {
   margin: auto;
   display: table;
@@ -247,7 +371,7 @@ html,body {
   }
 }
 
-#section3  p {
+#section4  p {
   padding: 30px;
   color: #595959;
   font-size: 20px;
@@ -257,8 +381,8 @@ html,body {
   }
 }
 
-#section3 {
-  background-color: #ededed;
+#section4 {
+  background-color: #e6e6e6;
   width: 100%;
   height: auto;
 }
@@ -270,30 +394,29 @@ html,body {
   padding-bottom: 15px;
 }
 
-#section4-banner {
-  background-color: #606060;
-  width: 100%;
-  height: auto;
-  margin-top: -10px;
+
+/* title divider*/
+#section5-banner {
+		background-color: #272944;
+		width: 100%;
+		height: auto;
+		margin-top: -10px;
+	}
+
+#section5-banner h3 {
+	font-size: 25px;
+	text-align: center;
+	color: #ffffff;
+	padding: 30px 20px 30px 20px;
+
+	@media (min-width: 1280px){
+		padding: 40px 35px 40px 35px;
+		font-size: 30px;
+	}
 }
 
-#section4-banner h3 {
-  color: #ffffff;
-  font-family: sans-serif;
-  font-style: bold;
-  font-size: 30px;
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-  @media (min-width: 1280px){
-    font-size: 35px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
-}
-
-#section4 {
+/*The New Design */
+#section5 {
   width: 100%;
   height: auto;
   background-image: #ffffff;
@@ -305,7 +428,7 @@ html,body {
   margin: auto;
   display: table;
   text-align: center;
-  padding-bottom: 54px;
+  padding-bottom: 30px;
   margin-top: 20px;
 }
 
@@ -313,6 +436,6 @@ html,body {
   text-align: center;
   margin: auto;
   display: table;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
   cursor: pointer;
 }
