file set up / homepage / about page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
-// @import '../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
+@import '../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
 
 @import "partials/homepage";
 @import "partials/rac-case-study";
 @import "partials/saatchi_project";
-@import "partials/allotment";
+@import "partials/about";
