--- a/sass/partials/homepage.scss
+++ b/sass/partials/homepage.scss
@@ -1,77 +1,287 @@
 // homepage.scss //
 @import '../bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
 
-/* ----------------------------- body style ----------------------------------*/
+/************ body style **********/
 html, body {
-  color: #7F7F7F;
-  font-family: "Open Sans", arial;
-  padding: 0;
-  margin: 0;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-font-variant-ligatures: none;
+  color: #7F7F7F!important;
+  font-family: "Roboto", helvetica, sans-serif;
   height: 100%;
+  margin: 0;
+  min-height: 100%;
+  padding: 0;
+}
+
+.wrapper {
+  min-height: 100%;
+  position: relative;
+}
+
+.favicon_icon {
+  background-image: url("../img/variable6.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 10px;
+  width: 10px;
 }
 
 //******* navigation *******//
-nav.navbar.navbar-default.navbar-fixed-top {
+a.navbar-brand {
+  font-size: 16px;
+  -webkit-transition: .2s ease-in-out;
+  -moz-transition: .2s ease-in-out;
+  -o-transition: .2s ease-in-out;
+  transition: .2s ease-in-out;
+  &:hover {
+    color: #b8a3fd!important;
+  }
+}
+
+nav.navbar.navbar-default {
   background: transparent;
   border: 0;
   margin-bottom: 0;
   margin-top: .5em;
+  @media(min-width: $screen-sm-min) {
+    margin-bottom: 7px;
+  }
+}
+
+#bs-example-navbar-collapse-1 {
+  background-color: lighten(#b8a3fd, 16%);
+  @media(min-width: $screen-sm-min) {
+    background-color: transparent;
+  }
 }
 
 .nav.navbar-nav.navbar-right {
-  li > a {
-    color: #A971FF;
-    padding: 10px 15px;
-    -webkit-transition: .2s ease-in-out;
-    -moz-transition: .2s ease-in-out;
-    -o-transition: .2s ease-in-out;
-    transition: .2s ease-in-out;
-    &:hover {
-      border-bottom: 2px solid #A971FF;
-      border-top: 2px solid #A971FF;
+  li > a:hover {
+    background-color: #b8a3fd;
+    color: #fff;
+  }
+}
+
+@media(min-width: $screen-sm-min) {
+  .nav.navbar-nav.navbar-right {
+    li > a {
+      border-bottom: 2px solid transparent;
+      border-top: 2px solid transparent;
+      -webkit-transition: .3s ease-in-out;
+      -moz-transition: .3s ease-in-out;
+      -o-transition: .3s ease-in-out;
+      transition: .3s ease-in-out;
+      &:active,
+      &:hover {
+        background-color: transparent;
+        border-bottom: 2px solid #b8a3fd;
+        border-top: 2px solid #b8a3fd;
+        color: #b8a3fd;
+      }
+    }
+  }
+
+  .nav.navbar-nav.navbar-right {
+    li > a.current {
+      background-color: transparent;
+      border-bottom: 2px solid #b8a3fd;
+      border-top: 2px solid #b8a3fd;
+      color: #b8a3fd;
     }
   }
 }
 
+#bs-example-navbar-collapse-1 {
+  border: 0!important;
+}
+
+// hamburger-animation //
+.navbar-header button {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+#hamburger-animation {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  height: 45px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  width: 30px;
+}
+
+#hamburger-animation span {
+  background: #b8a3fd;
+  border-radius: 9px;
+  display: block;
+  height: 4px;
+  left: 0;
+  opacity: 1;
+  position: absolute;
+  width: 100%;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#hamburger-animation span:nth-child(1) {
+  height: 3px;
+}
+
+#hamburger-animation span:nth-child(2) {
+  top: 14px;
+}
+
+#hamburger-animation span:nth-child(3) {
+  top: 18px;
+}
+
+#hamburger-animation span:nth-child(4) {
+  top: 26px;
+}
+
+#hamburger-animation.open span:nth-child(1) {
+  left: 50%;
+  top: 18px;
+  width: 0%;
+}
+
+#hamburger-animation.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#hamburger-animation.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#hamburger-animation.open span:nth-child(4) {
+  left: 50%;
+  top: 18px;
+  width: 0%;
+}
+
+#hamburger-animation.open span:nth-child(2) {
+  top: 22px;
+}
+
 //****** carousel ******//
 #homepage_carousel {
-  height: 90vh;
+  .carousel-inner {
+    z-index: -1;
+  }
 }
 
 .text_overlay_carousel {
-  height: 100vh;
-  left: 0;
-  position: absolute;
-  top: 0;
   width: 100%;
   z-index: -1;
 
-  h1 {
-    position: absolute;
-    text-align: right;
-    top: 2em;
+  .intro_area {
+    font-size: 2.3em;
+    font-weight: 500;
+    @media(min-width: $screen-sm-min) {
+      position: absolute;
+      right: 15px;
+      text-align: right;
+    }
+    @media(min-width: $screen-md-min) {
+      top: 1em;
+    }
+  }
+
+  .quote_area {
+    margin-bottom: 30px;
+    @media(min-width: $screen-sm-min) {
+      bottom: 1em;
+      margin-bottom: 0;
+      position: absolute;
+    }
+    @media(min-width: $screen-md-min) {
+      bottom: 4em;
+    }
+
+    img {
+      height: auto;
+      position: absolute;
+      top: -.7em;
+      width: 5em;
+      z-index: -1;
+    }
   }
 
   h5 {
+    font-style: italic;
     margin-left: 2em;
-    position: absolute;
-    top: 13em;
   }
 
-  h5::before {
-    content:'"';
-    color: gray;
-    font-size: 20em;
-    z-index: -1;
+  span {
+    font-style: normal;
+
+    p {
+      display: inline-block;
+      padding-left: .5em;
+    }
   }
+
+  span::before {
+    content: "-";
+    display: inline-block;
+    position: absolute;
+  }
+
+}
+
+.gallery_image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 300px;
+  width: auto;
+  @media(min-width: $screen-sm-min) {
+    height: 660px;
+  }
+}
+
+.gallery_image_1 {
+  background-image: url("../img/variable6.png");
+}
+
+.gallery_image_2 {
+  background-image: url("../img/variable20.png");
+}
+
+.gallery_image_3 {
+  background-image: url("../img/variable8.png");
+}
+
+.gallery_image_4 {
+  background-image: url("../img/variable5.png");
 }
 
 //** carousel fade **//
 .carousel-fade .carousel-inner .item {
   opacity: 0;
   transition-property: opacity;
-  transition-duration: 4s;
-  transition-timing-function:linear;
 }
 
 .carousel-fade .carousel-inner .active {
@@ -93,44 +303,106 @@ nav.navbar.navbar-default.navbar-fixed-top {
 .carousel-fade .carousel-control {
   z-index: 2;
 }
-
 @media all and (transform-3d), (-webkit-transform-3d) {
-  .carousel-fade .carousel-inner > .item.next,
-  .carousel-fade .carousel-inner > .item.active.right {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .carousel-fade .carousel-inner > .item.prev,
-  .carousel-fade .carousel-inner > .item.active.left {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-  .carousel-fade .carousel-inner > .item.next.left,
-  .carousel-fade .carousel-inner > .item.prev.right,
-  .carousel-fade .carousel-inner > .item.active {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
+    .carousel-fade .carousel-inner > .item.next,
+    .carousel-fade .carousel-inner > .item.active.right {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.prev,
+    .carousel-fade .carousel-inner > .item.active.left {
+      opacity: 0;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+    .carousel-fade .carousel-inner > .item.next.left,
+    .carousel-fade .carousel-inner > .item.prev.right,
+    .carousel-fade .carousel-inner > .item.active {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+    }
+}
+
+//** carousel page load fade in **//
+.page_load_fade_in {
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+     -moz-animation: fadein 2s; /* Firefox < 16 */
+      -ms-animation: fadein 2s; /* Internet Explorer */
+       -o-animation: fadein 2s; /* Opera < 12.1 */
+          animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 //****** footer ******//
-.copyright {
-  display: inline-block;
+footer {
+  bottom: 0;
+  height: 80px;
+  left: 0;
+  padding-top: 5em;
+  position: absolute;
+  right: 0;
+  @media(min-width: $screen-md-min) {
+    padding-top: 3em;
+  }
+}
+
+@media (min-width: $screen-sm-min) {
+  .copyright {
+    margin-right: -50%;
+    position: absolute;
+    top: 50%;
+  }
 }
 
 .logo_area {
+  @media (min-width: $screen-sm-min) {
+    position: absolute;
+    right: 0;
+    top: 50%;
+  }
   p {
     color: #7F7F7F;
     display: inline-block;
-    padding-right: 1em;
+    padding-right: .5em;
   }
 
   img {
     display: inline-block;
     height: auto;
     width: 8em;
+  }
+
+  a:hover {
+    text-decoration: none;
   }
 }
